# weather-data-pipeline

./: .gitignore  Dockerfile.local  README.md  package_and_upload.sh  pyproject.toml
etl/lambda/: ingestion.py  normalisation.py
etl/logging/: logger.py
etl/utils/: helper.py
infra/: main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/environments/dev/: terraform.tf
infra/lambda/: ingestion.Dockerfile  normalisation.Dockerfile
tests/utils/: test_helper.py
